--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "5.14.0",
     "@mui/x-date-pickers": "^6.20.2",
-    "axios": "1.4.0",
+    "axios": "^1.7.0",
     "date-fns": "^2.30.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
