--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "5.14.0",
     "@mui/x-date-pickers": "^6.20.2",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^2.4.0",
     "axios": "^1.7.0",
     "date-fns": "^2.30.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-helmet-async": "^2.0.5",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.14.1",
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.0.0",
